[gd_scene load_steps=18 format=3 uid="uid://hxidr1h70ruk"]

[ext_resource type="Script" path="res://scenes/main_game/game.gd" id="1_73igr"]
[ext_resource type="Texture2D" uid="uid://bw0365a5xnoxg" path="res://assets/main_game/areas/street.png" id="2_8ah13"]
[ext_resource type="Texture2D" uid="uid://bja5f8dobfwp2" path="res://assets/main_game/stall.png" id="2_liho8"]
[ext_resource type="PackedScene" uid="uid://d2g5x0hbh8ofm" path="res://scenes/minigame/minigame.tscn" id="2_xsin3"]
[ext_resource type="PackedScene" uid="uid://cp4c4ufchbjoe" path="res://scenes/main_game/food_fryer.tscn" id="3_4fqso"]
[ext_resource type="Texture2D" uid="uid://c87hoqqkkiwkv" path="res://assets/streetfoods/cooked/fishball.png" id="3_4lvat"]
[ext_resource type="FontFile" uid="uid://pps1p2nmmn6s" path="res://assets/font/Fredoka/static/Fredoka-Regular.ttf" id="3_leplk"]
[ext_resource type="Texture2D" uid="uid://cehulu2fhbxd1" path="res://assets/streetfoods/cooked/kikiam.png" id="4_0a7n4"]
[ext_resource type="Texture2D" uid="uid://cnyphiwx3sw36" path="res://assets/food_stall/steamer/steamer_base.png" id="4_nu3v5"]
[ext_resource type="Texture2D" uid="uid://meqfvp5njhfc" path="res://assets/streetfoods/cooked/squidball.png" id="5_qyupf"]
[ext_resource type="Texture2D" uid="uid://crhksqmmr28p5" path="res://assets/food_stall/steamer/steamer_front.png" id="5_xbejk"]
[ext_resource type="Texture2D" uid="uid://b16sxcmys35tx" path="res://assets/streetfoods/cooked/kwekkwek.png" id="6_xm2hg"]
[ext_resource type="Texture2D" uid="uid://dwkhnpiqbiqs5" path="res://assets/streetfoods/cooked/chicken_siomai.png" id="7_phxix"]
[ext_resource type="Texture2D" uid="uid://c7xpkwiu4a1cp" path="res://assets/streetfoods/cooked/pork_siomai.png" id="8_d3bs2"]
[ext_resource type="Texture2D" uid="uid://bbhbmaqfbd0yu" path="res://assets/streetfoods/cooked/japanese_siomai.png" id="9_rl13o"]
[ext_resource type="Texture2D" uid="uid://dklujeofi7q0k" path="res://assets/food_stall/plastic_cup.png" id="10_obxi8"]

[sub_resource type="Theme" id="Theme_ynjel"]
Label/constants/outline_size = 10
Label/font_sizes/font_size = 32
Label/fonts/font = ExtResource("3_leplk")

[node name="Game" type="Node2D"]
script = ExtResource("1_73igr")

[node name="AreaSprite" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(640, 250)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_8ah13")

[node name="Sprites" type="Node2D" parent="."]

[node name="StallSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(640, 360)
scale = Vector2(2, 2)
texture = ExtResource("2_liho8")

[node name="SiomaiSteamer" type="Node2D" parent="."]
position = Vector2(157, 481)
metadata/_edit_group_ = true

[node name="SiomaiSteamerSprite" type="Sprite2D" parent="SiomaiSteamer"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_nu3v5")

[node name="SiomaiSteamerGlassSprite" type="Sprite2D" parent="SiomaiSteamer"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_xbejk")

[node name="FoodItemsButtons" type="Node2D" parent="."]

[node name="Fishball" type="Button" parent="FoodItemsButtons"]
offset_left = 316.0
offset_top = 446.0
offset_right = 427.0
offset_bottom = 551.0
text = "Fishball"

[node name="Squidball" type="Button" parent="FoodItemsButtons"]
offset_left = 317.0
offset_top = 578.0
offset_right = 428.0
offset_bottom = 688.0
text = "Squidball"

[node name="Kikiam" type="Button" parent="FoodItemsButtons"]
offset_left = 455.0
offset_top = 446.0
offset_right = 570.0
offset_bottom = 553.0
text = "Kikiam"

[node name="KwekKwek" type="Button" parent="FoodItemsButtons"]
offset_left = 457.0
offset_top = 580.0
offset_right = 571.0
offset_bottom = 690.0
text = "KwekKwek"

[node name="FoodFryer" parent="." instance=ExtResource("3_4fqso")]
position = Vector2(1050, 545)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 563.0
offset_top = 410.0
offset_right = 921.0
offset_bottom = 674.0
theme = SubResource("Theme_ynjel")
theme_override_constants/separation = 0

[node name="FriedItems" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -40

[node name="FishballContainer" type="HBoxContainer" parent="HBoxContainer/FriedItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/FriedItems/FishballContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "FIshball"
texture = ExtResource("3_4lvat")
expand_mode = 3

[node name="Fishball" type="Label" parent="HBoxContainer/FriedItems/FishballContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "0"

[node name="KikiamContainer" type="HBoxContainer" parent="HBoxContainer/FriedItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/FriedItems/KikiamContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "Kikiam"
texture = ExtResource("4_0a7n4")
expand_mode = 2

[node name="Kikiam" type="Label" parent="HBoxContainer/FriedItems/KikiamContainer"]
layout_mode = 2
text = "0"

[node name="SquidballContainer" type="HBoxContainer" parent="HBoxContainer/FriedItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/FriedItems/SquidballContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "Squidball"
texture = ExtResource("5_qyupf")
expand_mode = 2

[node name="Squidball" type="Label" parent="HBoxContainer/FriedItems/SquidballContainer"]
layout_mode = 2
text = "0
"

[node name="KwekkwekContainer" type="HBoxContainer" parent="HBoxContainer/FriedItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/FriedItems/KwekkwekContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "Kwekkwek"
texture = ExtResource("6_xm2hg")
expand_mode = 2

[node name="Kwekkwek" type="Label" parent="HBoxContainer/FriedItems/KwekkwekContainer"]
layout_mode = 2
text = "0
"

[node name="UpgradeItems" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -40

[node name="ChickenSiomaiContainer" type="HBoxContainer" parent="HBoxContainer/UpgradeItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/UpgradeItems/ChickenSiomaiContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "Chicken Siomai"
texture = ExtResource("7_phxix")
expand_mode = 2

[node name="ChickenSiomai" type="Label" parent="HBoxContainer/UpgradeItems/ChickenSiomaiContainer"]
layout_mode = 2
text = "0
"

[node name="PorkSiomaiContainer" type="HBoxContainer" parent="HBoxContainer/UpgradeItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/UpgradeItems/PorkSiomaiContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "Pork Siomai"
texture = ExtResource("8_d3bs2")
expand_mode = 2

[node name="PorkSiomai" type="Label" parent="HBoxContainer/UpgradeItems/PorkSiomaiContainer"]
layout_mode = 2
text = "0"

[node name="JapaneseSiomaiContainer" type="HBoxContainer" parent="HBoxContainer/UpgradeItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/UpgradeItems/JapaneseSiomaiContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "Japanese Siomai"
texture = ExtResource("9_rl13o")
expand_mode = 2

[node name="JapaneseSiomai" type="Label" parent="HBoxContainer/UpgradeItems/JapaneseSiomaiContainer"]
layout_mode = 2
text = "0"

[node name="JuiceContainer" type="HBoxContainer" parent="HBoxContainer/UpgradeItems"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/UpgradeItems/JuiceContainer"]
modulate = Color(0.572549, 1, 1, 1)
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
tooltip_text = "Juice"
texture = ExtResource("10_obxi8")
expand_mode = 2

[node name="Juice" type="Label" parent="HBoxContainer/UpgradeItems/JuiceContainer"]
layout_mode = 2
text = "0
"

[node name="Customers" type="Node2D" parent="."]

[node name="Minigame" parent="." instance=ExtResource("2_xsin3")]
visible = false
position = Vector2(0, -1)

[node name="DaytimeTimer" type="Timer" parent="."]

[connection signal="pressed" from="FoodItemsButtons/Fishball" to="." method="_on_fishball_pressed"]
[connection signal="pressed" from="FoodItemsButtons/Squidball" to="." method="_on_squidball_pressed"]
[connection signal="pressed" from="FoodItemsButtons/Kikiam" to="." method="_on_kikiam_pressed"]
[connection signal="pressed" from="FoodItemsButtons/KwekKwek" to="." method="_on_kwek_kwek_pressed"]
[connection signal="timeout" from="DaytimeTimer" to="." method="_on_daytime_timer_timeout"]
